Fix jank during mac resize

Allow SetNeedsBeginFrames messages to be handled on Mac during resize.
If this message is not handled, then the renderer says that it needs
frames but the message is ignored because of the resize lock.  Then, the
browser never sends begin frame messages and the renderer then never is
able to produce a frame.  This means that it can't produce a frame of
the right size before the resize lock times out and there's jank on
screen.

R=ccameron@chromium.org,sievers@chromium.org
BUG=632603,638561

Review-Url: https://codereview.chromium.org/2246613002
Cr-Commit-Position: refs/heads/master@{#413601}

Former-commit-id: e5ce61d4966237e3572f3048a6ea39c7ba7d7c64